layout issue with top menu

--- a/css/main.css
+++ b/css/main.css
@@ -17,4 +17,5 @@ body {
 }
 .topmenu {
 	margin:-60px 0;
+	float:left;
 }
